--- a/packages/react-app/styles/globals.css
+++ b/packages/react-app/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -62,5 +63,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    background-color: black;
+    color: white;
   }
 }
